cluster/apps/networking-system/ingresses/base/minio/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
      services:
        - name: minio
          port: 9001
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls

---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-s3
  labels:
    app.kubernetes.io/name: minio
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`s3.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
      services:
        - name: minio
          port: 9000
          namespace: default
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
